| Bug #17838 | binlog not setup on seconday master after rename | ||
|---|---|---|---|
| Submitted: | 1 Mar 2006 19:57 | Modified: | 14 Mar 2006 9:19 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1.8 src | OS: | |
| Assigned to: | Tomas Ulin | Target Version: | |
[1 Mar 2006 19:57]
Tomas Ulin
[8 Mar 2006 23:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3603
[9 Mar 2006 14:06]
Tomas Ulin
pushed to 5.1.8
[14 Mar 2006 9:19]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.8 changelog; closed.
