Bug #17838 binlog not setup on seconday master after rename -added setting up of binlogging after receiving rename table +cleanup

mysql-test/r/ndb_binlog_ddl_multi.result:
  Bug #17838 binlog not setup on seconday master after rename
mysql-test/t/ndb_binlog_ddl_multi.test:
  Bug #17838 binlog not setup on seconday master after rename
mysql-test/include/show_binlog_events.inc:
  New BitKeeper file ``mysql-test/include/show_binlog_events.inc''